// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open CSIDivisionPicker, dark 1`] = `
{
  "lines": 289,
  "modalCount": 1,
  "sha256": "ec36fc4732b15281d425ef1a4f60c45f86b7e8530678d9cfe6240d9d5dd91fd4",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open CSIDivisionPicker, light 1`] = `
{
  "lines": 289,
  "modalCount": 1,
  "sha256": "27b1f149041c0947fb180b62f103191834511a072c4b32a204a2b86b66109aaf",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open DemoSeedPickerModal, dark 1`] = `
{
  "lines": 210,
  "modalCount": 1,
  "sha256": "757d001af7e6bcad318aaa541e2900713b0969ed7d2071482494bca6665a9d0a",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open DemoSeedPickerModal, light 1`] = `
{
  "lines": 210,
  "modalCount": 1,
  "sha256": "bdd516c699b56b81a06588998f67225816083b5ee69821320d27a52a575389a4",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open FeatureExplainerSheet, dark 1`] = `
{
  "lines": 49,
  "modalCount": 1,
  "sha256": "e86508eb19a04ca221548c5d16e7960c6706322afb1a332b3d179836b09e383d",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open FeatureExplainerSheet, light 1`] = `
{
  "lines": 49,
  "modalCount": 1,
  "sha256": "fc7ca33d5bac3abeb36d1d2ec55d6f849d603ec4fbc83dd20f41935978627283",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open HelpFab, dark 1`] = `
{
  "lines": 64,
  "modalCount": 1,
  "sha256": "62f070c89e4df38ade5e2da401f274f1ffc976d436216e2fcc028096eaf00ea6",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open HelpFab, light 1`] = `
{
  "lines": 64,
  "modalCount": 1,
  "sha256": "90bdb258c14142e730ffd0f499d7a326aa446f7e45bd7b800d5bf45011c67a3a",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open JobSwitcher, dark 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "2864b91fdfbfcce3e80a7d7ef8f0209916b598e1c210a46ae9db31fe3c63c4c8",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open JobSwitcher, light 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "082de57b176be75f84f6092731eabacc7d5e3374fe120f1f6f1f4f1e459aa319",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open PunchPhotoViewer, dark 1`] = `
{
  "lines": 14,
  "modalCount": 1,
  "sha256": "50a9987cff5b952aab65677fe9c880b2148f436641963aeab7f5ff679ed51643",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open PunchPhotoViewer, light 1`] = `
{
  "lines": 14,
  "modalCount": 1,
  "sha256": "50a9987cff5b952aab65677fe9c880b2148f436641963aeab7f5ff679ed51643",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open QuickUpdateClarifier, dark 1`] = `
{
  "lines": 99,
  "modalCount": 1,
  "sha256": "f0c78ba69443013cbe2c4f68229142f933548dc859274bf113b6ca36b02b3b12",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open QuickUpdateClarifier, light 1`] = `
{
  "lines": 99,
  "modalCount": 1,
  "sha256": "cb9131e7e0deac54f207c3c10096cc677c511035f1e1f222a7107431dfc3b635",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open RateProvenanceChip, dark 1`] = `
{
  "lines": 61,
  "modalCount": 1,
  "sha256": "728af712dbf9b875d8caab6ff9b0f592f5ecea9e595faaa937dacfed00c707fc",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open RateProvenanceChip, light 1`] = `
{
  "lines": 61,
  "modalCount": 1,
  "sha256": "dbbaa0283412948154528ca4f6ab65a4c9e4a0be0fd181542e71c06d35616ead",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolbarActions, dark 1`] = `
{
  "lines": 20,
  "modalCount": 1,
  "sha256": "8d3e33a23c87a8ee7acb2efc556cda54bc5e055eab313656fb25eb63adbde972",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolbarActions, light 1`] = `
{
  "lines": 20,
  "modalCount": 1,
  "sha256": "d610727a8840f6441e334b4e01413dbaabdd2687b6281f928aebe3ba931cb50e",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolsSheet, dark 1`] = `
{
  "lines": 202,
  "modalCount": 1,
  "sha256": "aa817d0bc1ed8a6e8feef77b84063850b15f49296cc9fe3f81bb911c3469db0e",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolsSheet, light 1`] = `
{
  "lines": 202,
  "modalCount": 1,
  "sha256": "4230d97df735b513b532f11909282da5d97e0e6af82f880d9e3140a1faf5a608",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open VoiceCommandModal, dark 1`] = `
{
  "lines": 89,
  "modalCount": 1,
  "sha256": "c7fb2a09cd2c65b25a23eba8f1f49a02bbf559f253abf616f23bf588f2983481",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open VoiceCommandModal, light 1`] = `
{
  "lines": 89,
  "modalCount": 1,
  "sha256": "0dda79c48ee653168f79905e1dadc104fbde15d15c7452d2d8f7c6780e31fa9e",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag building-access 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 45,
      "sha256": "9b4ef9defddcead173c05b0b7f4ba62f4bf0b265d97b9f4624c05c823349ada5",
      "title": "Book a slot",
    },
  ],
  "whole": {
    "lines": 439,
    "sha256": "951e5917e084b9e63d1ad14d036aa180872407dacb74f28ab88c5b0bccdea293",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag company-profile 1`] = `
{
  "modalCount": 7,
  "sheets": [
    {
      "found": true,
      "lines": 180,
      "sha256": "88f84e910e5d59eda68c4602d7d835c567f608bc8c6a1aa0cef33beeb4a0331c",
      "title": "Which state licenses you?",
    },
    {
      "found": true,
      "lines": 38,
      "sha256": "5273fa913c37c30740f8abebbdcbe5e3ab97fae88d13507d3d80362af02fb355",
      "title": "Draw Your Signature",
    },
  ],
  "whole": {
    "lines": 723,
    "sha256": "cd1ac2ba329a39637e09dced4a90a0377bed93f8233969e00c2a9f2d6e843e9f",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag discover/bids 1`] = `
{
  "modalCount": 6,
  "sheets": [
    {
      "found": true,
      "lines": 24,
      "sha256": "e02f91c7c61c15a4d160ddf60bff35cf1769d02c4e37fde37e39884491b871ad",
      "title": "Sort By",
    },
    {
      "found": true,
      "lines": 39,
      "sha256": "aafd35217ca1415935f0bdbbea4a0bd626281718fe8ad5937e667a2954dfed7d",
      "title": "Set-Aside Type",
    },
  ],
  "whole": {
    "lines": 608,
    "sha256": "1c47813bc0669893d961ab4cd222c1a44155faee7aa9f80037724b6450ed35d8",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag equipment-detail (seeded machine) 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 22,
      "sha256": "20195359f6092904081af370efa4eea39c1083152889fe611a28b5e5b799c4a9",
      "title": "Log usage",
    },
  ],
  "whole": {
    "lines": 440,
    "sha256": "f0a8f599d0e1099caf93f6a9af6778cb4b0f820c3e3ba7c838b58cb8f6e12471",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag equipment-detail 1`] = `
{
  "modalCount": 4,
  "sheets": [
    {
      "found": false,
      "title": "Log usage",
    },
  ],
  "whole": {
    "lines": 319,
    "sha256": "0ebfe61af7e28639e7f52e74f69b46c95b032ae9ce9b7d96cb4decc7dde60355",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag get-verified 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 169,
      "sha256": "51e6a8fa734fe0ea975472576ae69fbc85b7ef856ccc9cf4dc415e46268973ec",
      "title": "Issuing state",
    },
  ],
  "whole": {
    "lines": 547,
    "sha256": "bc7c141d4b0cdc4cbbe7aa8f3889816d15ffc267b8579f3420b5d77a87574280",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag lead-detail 1`] = `
{
  "modalCount": 8,
  "sheets": [
    {
      "found": true,
      "lines": 36,
      "sha256": "23c9ab801689557c7239620f6dff5fb8b9c01bae2c31e960f7deff2a186c48e4",
      "title": "Why did this one go cold?",
    },
  ],
  "whole": {
    "lines": 610,
    "sha256": "a27dc5f8568240d6d2470d8f4094782cf0e22c44ffcee6c2ff11b1d443f0a319",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag materials/lumber 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 11,
      "sha256": "714fab972bc7f43d2325e34d2081a32f0b275c456eca9add163564f1dd27b6cb",
      "title": "Set Price Alert",
    },
  ],
  "whole": {
    "lines": 1657,
    "sha256": "4b7797c343d78d3e0c86def61f2575de1ca868a94e60970ac2e73bb0d72049b9",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag plan-intelligence 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 36,
      "sha256": "78b62dae5ba7feaf7a827f4bdb482b3022f83a9f1e321c2306aa295af3f6fb01",
      "title": "Save room",
    },
  ],
  "whole": {
    "lines": 387,
    "sha256": "cf95c82fdcabfa5b1664782edfc6101cb5f66536d2c5c731cb3fde19e184aa1c",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag qbo-review 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 21,
      "sha256": "ed5a85914d09479887d6584cdeab52771c766d8c5fb4e1c311d37eddb27112e2",
      "title": "Which project is this cost for?",
    },
  ],
  "whole": {
    "lines": 360,
    "sha256": "be6ddf250b5636bfcea0a4beda73d3d208dc451345e15c9f10ed9f67c4091cc4",
  },
}
`;
